--- a/Move.xaml
+++ b/Move.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Sequence" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Drawing;assembly=System.Drawing" xmlns:sdd="clr-namespace:System.Drawing.Drawing2D;assembly=System.Drawing" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Sequence" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib" xmlns:sd="clr-namespace:System.Drawing;assembly=System.Drawing" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="Ori" Type="InArgument(x:Int32)" />
     <x:Property Name="BM" Type="InArgument(x:String)" />
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>476,2068</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>476,1868.66666666667</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -32,6 +32,7 @@
       <x:String>UiPath.Core</x:String>
       <x:String>UiPath.Core.Activities</x:String>
       <x:String>System.Drawing.Drawing2D</x:String>
+      <x:String>System.Drawing.Internal</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -59,25 +60,25 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Sequence" sap:VirtualizedContainerService.HintSize="436,1988" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Sequence" sap:VirtualizedContainerService.HintSize="436,1788.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="ui:UiElement" Name="Ele" />
       <Variable x:TypeArguments="x:Int32" Name="L_scale" />
       <Variable x:TypeArguments="sd:Graphics" Default="[Graphics.FromHwnd(IntPtr.Zero)]" Name="g" />
-      <Variable x:TypeArguments="sdd:LinearGradientBrush" Name="lgb" />
+      <Variable x:TypeArguments="sd:Pen" Default="[new Pen(Color.red, 5)]" Name="pen" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Chess'" sap:VirtualizedContainerService.HintSize="414,1864" sap2010:WorkflowViewState.IdRef="BrowserScope_2" InformativeScreenshot="ae316a561b745a7bf53e4813043e015e" Selector="&lt;html app='chrome.exe' title='* - Chess.co*' /&gt;">
+    <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" UiBrowser="{x:Null}" BrowserType="Chrome" DisplayName="Attach Browser 'chrome.exe Chess'" sap:VirtualizedContainerService.HintSize="414,1664.66666666667" sap2010:WorkflowViewState.IdRef="BrowserScope_2" InformativeScreenshot="ae316a561b745a7bf53e4813043e015e" Selector="&lt;html app='chrome.exe' title='* - Chess.co*' /&gt;">
       <ui:BrowserScope.Body>
         <ActivityAction x:TypeArguments="x:Object">
           <ActivityAction.Argument>
             <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
           </ActivityAction.Argument>
-          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="336,1718" sap2010:WorkflowViewState.IdRef="Sequence_4">
+          <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="336,1518.66666666667" sap2010:WorkflowViewState.IdRef="Sequence_8">
             <Sequence.Variables>
               <Variable x:TypeArguments="sd:Rectangle" Name="posi" />
               <Variable x:TypeArguments="x:Int32" Name="OffsetX" />
@@ -89,12 +90,12 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:WaitUiElementAppear DisplayName="Find Element 'DIV  piece'" FoundElement="[ele]" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="WaitUiElementAppear_1" WaitActive="False" WaitVisible="False">
+            <ui:WaitUiElementAppear DisplayName="Find Element 'DIV  piece'" FoundElement="[ele]" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="WaitUiElementAppear_4" WaitActive="False" WaitVisible="False">
               <ui:WaitUiElementAppear.Target>
                 <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" InformativeScreenshot="fa7c4df42076e2478ae1550208c69fc5" Selector="[&quot;&lt;webctrl tag='DIV' class='piece square-0&quot;+BM.Substring(0,1)+&quot;0&quot;+BM.Substring(1,1)+&quot;' /&gt;&quot;]" TimeoutMS="100" WaitForReady="COMPLETE" />
               </ui:WaitUiElementAppear.Target>
             </ui:WaitUiElementAppear>
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_2">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_23">
               <Assign.To>
                 <OutArgument x:TypeArguments="sd:Rectangle">[posi]</OutArgument>
               </Assign.To>
@@ -102,8 +103,7 @@
                 <InArgument x:TypeArguments="sd:Rectangle">[ele.GetPosition.Rectangle.Value]</InArgument>
               </Assign.Value>
             </Assign>
-            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="314,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[posi.ToString]" />
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_1">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_24">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:Int32">[L_Pix]</OutArgument>
               </Assign.To>
@@ -111,7 +111,7 @@
                 <InArgument x:TypeArguments="x:Int32">[ele.GetPosition.Rectangle.Value.Width]</InArgument>
               </Assign.Value>
             </Assign>
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_4">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_25">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:Int32">[L_scale]</OutArgument>
               </Assign.To>
@@ -119,7 +119,7 @@
                 <InArgument x:TypeArguments="x:Int32">[Convert.ToInt32(ele.GetPosition.Rectangle.Value.Width*100/g.DpiX)]</InArgument>
               </Assign.Value>
             </Assign>
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_5">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_26">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:Int32">[OffsetX]</OutArgument>
               </Assign.To>
@@ -127,7 +127,7 @@
                 <InArgument x:TypeArguments="x:Int32" xml:space="preserve">[-Ori*( int32.Parse(BM.Substring(2,1)) -  int32.Parse(BM.Substring(0,1)))]</InArgument>
               </Assign.Value>
             </Assign>
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_6">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_27">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:Int32">[OffsetY]</OutArgument>
               </Assign.To>
@@ -135,7 +135,7 @@
                 <InArgument x:TypeArguments="x:Int32" xml:space="preserve">[Ori*( int32.Parse(BM.Substring(3,1)) -  int32.Parse(BM.Substring(1,1)))]</InArgument>
               </Assign.Value>
             </Assign>
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_3">
+            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_28">
               <Assign.To>
                 <OutArgument x:TypeArguments="sd:Point">[posi.Location]</OutArgument>
               </Assign.To>
@@ -143,23 +143,19 @@
                 <InArgument x:TypeArguments="sd:Point">[posi.Location + new size(OffsetX*L_pix, OffSetY*L_pix)]</InArgument>
               </Assign.Value>
             </Assign>
-            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="314,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[posi.ToString]" />
-            <Assign sap:VirtualizedContainerService.HintSize="314,62" sap2010:WorkflowViewState.IdRef="Assign_7">
-              <Assign.To>
-                <OutArgument x:TypeArguments="sdd:LinearGradientBrush">[lgb]</OutArgument>
-              </Assign.To>
-              <Assign.Value>
-                <InArgument x:TypeArguments="sdd:LinearGradientBrush">[New Drawing2D.LinearGradientBrush(posi, Color.Red, Color.Orange, 90, True)]</InArgument>
-              </Assign.Value>
-            </Assign>
-            <InvokeMethod DisplayName="Invoke Method" sap:VirtualizedContainerService.HintSize="314,134" sap2010:WorkflowViewState.IdRef="InvokeMethod_1" MethodName="FillRectangle">
+            <ui:Highlight Color="Red" ContinueOnError="True" HighlightTime="300" sap:VirtualizedContainerService.HintSize="314,68" sap2010:WorkflowViewState.IdRef="Highlight_4">
+              <ui:Highlight.Target>
+                <ui:Target ClippingRegion="{x:Null}" Selector="{x:Null}" TimeoutMS="{x:Null}" Element="[Ele]" WaitForReady="INTERACTIVE" />
+              </ui:Highlight.Target>
+            </ui:Highlight>
+            <InvokeMethod DisplayName="Invoke Method" sap:VirtualizedContainerService.HintSize="314,134" sap2010:WorkflowViewState.IdRef="InvokeMethod_4" MethodName="DrawRectangle">
               <InvokeMethod.TargetObject>
                 <InArgument x:TypeArguments="sd:Graphics">[g]</InArgument>
               </InvokeMethod.TargetObject>
-              <InArgument x:TypeArguments="sdd:LinearGradientBrush">[lgb]</InArgument>
+              <InArgument x:TypeArguments="sd:Pen">[pen]</InArgument>
               <InArgument x:TypeArguments="sd:Rectangle">[posi]</InArgument>
             </InvokeMethod>
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" ClickType="CLICK_DOWN" DisplayName="Pick up the piece" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="Click_1" KeyModifiers="None" MouseButton="BTN_LEFT" SendWindowMessages="False" SimulateClick="False">
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" ClickType="CLICK_DOWN" DisplayName="Pick up the piece" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="Click_8" KeyModifiers="None" MouseButton="BTN_LEFT" SendWindowMessages="False" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition Position="Center">
                   <ui:CursorPosition.OffsetX>
@@ -171,11 +167,11 @@
                 </ui:CursorPosition>
               </ui:Click.CursorPosition>
               <ui:Click.Target>
-                <ui:Target ClippingRegion="{x:Null}" Element="{x:Null}" InformativeScreenshot="ae0d321c36a3f4246939a63e7db61212" Selector="[&quot;&lt;webctrl tag='DIV' class='piece square-0&quot;+BM.Substring(0,1)+&quot;0&quot;+BM.Substring(1,1)+&quot;' /&gt;&quot;]" TimeoutMS="1000" WaitForReady="COMPLETE" />
+                <ui:Target ClippingRegion="{x:Null}" Selector="{x:Null}" Element="[Ele]" InformativeScreenshot="ae0d321c36a3f4246939a63e7db61212" TimeoutMS="1000" WaitForReady="COMPLETE" />
               </ui:Click.Target>
             </ui:Click>
-            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="314,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_8" Text="[(OffsetX*L_scale).ToString + &quot; &quot; +(OffsetY*L_scale).ToString]" />
-            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" ClickType="CLICK_UP" DisplayName="Put down the Piece" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="Click_2" KeyModifiers="None" MouseButton="BTN_LEFT" SendWindowMessages="False" SimulateClick="False">
+            <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="314,62.6666666666667" sap2010:WorkflowViewState.IdRef="WriteLine_20" Text="[(OffsetX*L_scale).ToString + &quot; &quot; +(OffsetY*L_scale).ToString]" />
+            <ui:Click DelayBefore="{x:Null}" DelayMS="{x:Null}" ClickType="CLICK_UP" DisplayName="Put down the Piece" sap:VirtualizedContainerService.HintSize="314,106" sap2010:WorkflowViewState.IdRef="Click_9" KeyModifiers="None" MouseButton="BTN_LEFT" SendWindowMessages="False" SimulateClick="True">
               <ui:Click.CursorPosition>
                 <ui:CursorPosition OffsetX="[OffsetX*L_scale]" OffsetY="[OffsetY*L_scale]" Position="Center" />
               </ui:Click.CursorPosition>
